🐛 Fix placeholder image on mobile devices

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -31,7 +31,7 @@
     text-align: center;
     color: var(--branco);
     background: url("../img/Lupa.svg") no-repeat;
-    background-position: 10% center;
+    background-position: 8% center;
     padding-left: 3em;
 }
 
